# disease2yomi

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
disease2yomi/: app.py  disease2yomi_v2.py  estimate.py  estimate_geo_code.py  test.py
disease2yomi/data/: sample_body_name_100.csv  sample_data.csv  sample_data_100.csv
disease2yomi/templates/: index.html  result.html  yomi.html
disease2yomi/trained_model/: tokenizer_config.json
disease2yomi/trained_model/to_yomi_of_body/: config.json  tokenizer_config.json
