[tool.poetry]
name = "disease2yomi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
transformers = "^4.30.2"
pytorch-lightning = "^2.0.5"
requests = "^2.31.0"
python-dotenv = "^0.21.0"
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
