[tool.poetry]
name = "disease2yomi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
transformers = "^4.30.2"
pytorch-lightning = "^2.0.5"
requests = "^2.31.0"
sentencepiece = "^0.1.99"
streamlit = "^1.27.0"
streamlit-ext = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
